Refactor: Replace prefixed private fields with consistent naming, improve nullability and encapsulation across modules